# duckdb-postal

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: MainDistributionPipeline.yml
src/: postal_extension.cpp
src/include/: postal_extension.hpp
test/nodejs/: postal_test.js
test/python/: postal_test.py
test/sql/: postal.test
